Remove patch and delete for service type
